// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Input/TextInput Autofocus 1`] = `
<RCTScrollView
  style={
    Array [
      Object {},
      undefined,
    ]
  }
>
  <View>
    <TextInput
      autoFocus={true}
      error={false}
      focus={true}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="placeholder"
      style={
        Array [
          Object {
            "borderColor": "#007ac9",
            "borderRadius": 3.5,
            "borderStyle": "solid",
            "borderWidth": 1,
            "color": "#333333",
            "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B, Arial, Georgia, serif",
            "fontSize": 15.75,
            "paddingBottom": 12.25,
            "paddingLeft": 15.75,
            "paddingRight": 15.75,
            "paddingTop": 12.25,
          },
          Array [
            Object {},
            undefined,
          ],
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</RCTScrollView>
`;

exports[`Storyshots Input/TextInput Default 1`] = `
<RCTScrollView
  style={
    Array [
      Object {},
      undefined,
    ]
  }
>
  <View>
    <TextInput
      error={false}
      focus={undefined}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="placeholder"
      style={
        Array [
          Object {
            "borderColor": "#b7b7b7",
            "borderRadius": 3.5,
            "borderStyle": "solid",
            "borderWidth": 1,
            "color": "#888888",
            "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B, Arial, Georgia, serif",
            "fontSize": 15.75,
            "paddingBottom": 12.25,
            "paddingLeft": 15.75,
            "paddingRight": 15.75,
            "paddingTop": 12.25,
          },
          Array [
            Object {},
            undefined,
          ],
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</RCTScrollView>
`;
